[package]
name = "zerotoprod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zerotoprod"
path = "src/lib.rs"

[[bin]]
name = "zerotoprod"
path = "src/main.rs"

[dependencies]
actix-web = "4.3"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
	"macros",
	"postgres",
	"runtime-tokio-rustls",
	"time",
	"uuid",
]

